# Algoritmia-basica-2018

./: Algoritmo.cpp  Algoritmo.h  CMakeLists.txt  Frontera.cpp  Generador.cpp  Generador.h  Memoria Alg 2.docx  Nodo.cpp  Nodo.h  README.md  algoritmo.cpp  algoritmo.h  algoritmo_criterio_1.cpp  algoritmo_criterio_2.cpp  algoritmo_criterio_3.cpp  compila.sh  comprobar_solucion.cpp  comprobar_vectores.cpp  ejecuta.sh  entregar.tar.xz  frontera.cpp  frontera.h  generador_pruebas.cpp  generador_vectores.cpp  generarPruebas.sh  generar_pruebas.sh  lanza_algoritmos.sh  main.cpp  nodo_pruebas.cpp  nodo_pruebas.h  practica 2.rar  practica2.tar  variables_globales.h
P1/: Nodo.cpp  Nodo.h  README.md  algoritmo.cpp  comprobar_solucion.cpp  main.cpp
P1/entrega/: practica1.tar.partaa  practica1.tar.partab  practica1.tar.partac  practica1.tar.partad
P2/: README.md  algoritmo_criterio_2.cpp  algoritmo_criterio_3.cpp  generador_vectores.cpp
entrega/: practica1.tar.partae  practica1.tar.partaf  practica2.tar
